# corrected-modified-brainco_hand_service

./: .gitignore  CMakeLists.txt  README.md  README_zh-CN.md  main.cpp  setup_autostart.sh
lib/: VERSION
test/: brainco_hand_cli.cpp  test_brainco_hand_server.cpp
